Replace Parameter classes pointlessly parsing on instantiation